# brother-monitor

./: .directory  .gitignore  CLAUDE.md  LICENSE  README.md  brother_monitor.py  config.py  history.py  install.sh  main_window.py  printer_client.py  pyproject.toml  requirements.txt  test_svg.py  tray.py  widgets.py
docs/: TROUBLESHOOTING_PRINT_ZOOM.md
drivers/: base.py  brother_http.py  snmp.py
tests/: conftest.py  test_base_driver.py  test_brother_http_driver.py  test_config.py  test_history.py  test_main_window.py  test_printer_client.py  test_snmp_driver.py  test_tray.py  test_widgets.py
