[project]
name = "brother-monitor"
version = "0.1.0"
description = "Monitor per stampanti Brother via SNMP"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.9.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.14.0",
    "pyyaml>=6.0",
    "pysnmp>=5.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-qt>=4.5.0",
]
